--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta name="theme-color"content="cornslink">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="manifest"href="manifest.json">
-        <link rel="apple-touch-icon" href="img/icon-192x192.png">
+        <link rel="apple-touch-icon" href="icon-192x192.png">
         <title>Zeal of the Lofty </title>
        
-        <style src="src/style.css"></style>
+        <style src="style.css"></style>
     </head>
 
     <body>    
