--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="theme-color"content="cornslink">
+        <meta name="theme-color"content="#818181">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="apple-touch-icon" href="img/icon-192x192.png">
         <link rel="manifest"href="manifest.json">
-        <link rel="apple-touch-icon" href="icon-192x192.png">
         <title>Zeal of the Lofty </title>
-       
-        <style src="style.css"></style>
+        <script src="index.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"crossOrigin="anonymous"></script>
+
+        <link rel="stylesheet" href="src/style.css">
     </head>
 
     <body>    
         <div class="sidenav">
-
+            <dl>
+            <dt><a href="#">Status</a></dt>
+            <dt><a href="#">Inventory</a></dt>
+            <dt><a href="#">Equipment</a></dt>
+            <dt><a href="#">Craft</a></dt>
+            </dl>
         </div>
     </body>
     <footer>
-        <script src="index.js"></script>
         </footer>
     </html>
