--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <link rel="manifest"href="manifest.json">
         <title>Zeal of the Lofty </title>
         <script src="index.js"></script>
+        <!-- Latest compiled and minified CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Latest compiled JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"crossOrigin="anonymous"></script>
 
         <link rel="stylesheet" href="src/style.css">
@@ -15,9 +20,8 @@
     <body>    
         <div class="sidenav">
             <dl>
-            <dt><a href="#">Status</a></dt>
-            <dt><a href="#">Inventory</a></dt>
-            <dt><a href="#">Equipment</a></dt>
+            <dt><a href="#">الفياب</a></dt>
+            <dt><a href="#">عن المدرسه</a></dt>
             <dt><a href="#">Craft</a></dt>
             </dl>
         </div>
