--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="apple-touch-icon" href="img/icon-192x192.png">
         <link rel="manifest"href="manifest.json">
-        <title>Zeal of the Lofty </title>
+        <title>ثانويه عروه بن الزبير بنين </title>
         <script src="index.js"></script>
         <!-- Latest compiled and minified CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
         <!-- Latest compiled JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"crossOrigin="anonymous"></script>
-
         <link rel="stylesheet" href="src/style.css">
     </head>
 
@@ -22,7 +20,7 @@
             <dl>
             <dt><a href="#">الفياب</a></dt>
             <dt><a href="#">عن المدرسه</a></dt>
-            <dt><a href="#">Craft</a></dt>
+            <dt><a href="#">الجدول</a></dt>
             </dl>
         </div>
     </body>
