--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <dt><a href="#">الجدول</a></dt>
             </dl>
         </div>
+        {% block content %}{% endblock %}
     </body>
     <footer>
         </footer>
