--- a/attendance.html
+++ b/attendance.html
@@ -1,5 +1,62 @@
-{%extend "index.html"%}
-{% block content %}
-<h1>الغياب</h1>
+ <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="theme-color"content="#818181">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="apple-touch-icon" href="img/icon-192x192.png">
+        <link rel="manifest"href="manifest.json">
+        <title>ثانويه عروه بن الزبير بنين </title>
+        <script src="index.js"></script>
+        <!-- Latest compiled and minified CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Latest compiled JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"crossOrigin="anonymous"></script>
+        <link rel="stylesheet" href="src/style.css">
+    </head>
 
-{% end block %}
+    <body>    
+        <div class="sidenav">
+            <dl>
+            <dt><a href="./attendance.html">الغياب</a></dt>
+            <dt><a href="#">عن المدرسه</a></dt>
+            <dt><a href="#">الجدول</a></dt>
+            </dl>
+        </div>
+      <h1>الغياب</h1>
+        <div class="container mt-3">
+  <h2>Dark Striped Table</h2>
+  <p>Combine .table-dark and .table-striped to create a dark, striped table:</p>            
+  <table class="table table-dark table-striped">
+    <thead>
+      <tr>
+        <th>الأسم</th>
+        <th>الفصل</th>
+        <th>المجموعه</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+    </body>
+    <footer>
+        </footer>
+    </html>
+
+
