--- a/attendance.html
+++ b/attendance.html
@@ -23,13 +23,28 @@
             <dt><a href="#">الجدول</a></dt>
             </dl>
         </div>
+      <div class="dropdown">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> الصف</button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" >العاشر</a></li>
+    <li><a class="dropdown-item" >حادي عشر</a></li>
+    <li><a class="dropdown-item" >الثاني عشر</a></li>
+  </ul>
+</div>
       <h1>الغياب</h1>
         <div class="container mt-3">
-  <h2>Dark Striped Table</h2>
-  <p>Combine .table-dark and .table-striped to create a dark, striped table:</p>            
+  <h2>الغياب</h2>
+  <p>غياب الطلبه</p>            
   <table class="table table-dark table-striped">
     <thead>
       <tr>
+      
+         <th>7</th>
+         <th>5</th>
+         <th>4</th>
+         <th>3</th>
+         <th>2</th>
+         <th>1</th>
         <th>المجموعه </th>
         <th>الفصل</th>
         <th>الأسم</th>
