--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <body>    
         <div class="sidenav">
             <dl>
+            <dt><a href="./">الصفحه الرئيسيه</a></dt>
             <dt><a href="./attendance.html">الغياب</a></dt>
             <dt><a href="#">عن المدرسه</a></dt>
             <dt><a href="#">الجدول</a></dt>
