--- a/attendance.html
+++ b/attendance.html
@@ -23,6 +23,7 @@
             <dt><a href="#">الجدول</a></dt>
             </dl>
         </div>
+     
       <div class="dropdown">
       <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> الصف</button>
   <ul class="dropdown-menu">
@@ -33,7 +34,12 @@
 </div>
       <h1>الغياب</h1>
         <div class="container mt-3">
-  <h2>الغياب</h2>
+  <h2>
+   <script>
+date = new Date().toLocaleDateString();
+document.write(date);
+</script>
+  </h2>
   <p>غياب الطلبه</p>            
   <table class="table table-dark table-striped">
     <thead>
