--- a/attendance.html
+++ b/attendance.html
@@ -16,8 +16,9 @@
     </head>
 
     <body>    
-        <div class="sidenav">
+      <div class="sidenav">
             <dl>
+            <dt><a href="./">الصفحه الرئيسيه</a></dt>
             <dt><a href="./attendance.html">الغياب</a></dt>
             <dt><a href="#">عن المدرسه</a></dt>
             <dt><a href="#">الجدول</a></dt>
