--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
     </head>
 
     <body>    
-        <div class="sidenav">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+
             <dl>
             <dt><a href="./">الصفحه الرئيسيه</a></dt>
             <dt><a href="./attendance.html">الغياب</a></dt>
             <dt><a href="#">عن المدرسه</a></dt>
             <dt><a href="#">الجدول</a></dt>
             </dl>
-        </div>
-        <!-- Carousel -->
+        </nav>
+<!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
   <!-- Indicators/dots -->
