--- a/attendance.html
+++ b/attendance.html
@@ -16,14 +16,15 @@
     </head>
 
     <body>    
-      <div class="sidenav">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
             <dl>
             <dt><a href="./">الصفحه الرئيسيه</a></dt>
             <dt><a href="./attendance.html">الغياب</a></dt>
             <dt><a href="#">عن المدرسه</a></dt>
             <dt><a href="#">الجدول</a></dt>
             </dl>
-        </div>
+         
+</nav>
      
 
         <div class="container mt-3">
