--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <body>    
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 
-            <dl>
-            <dt><a href="./">الصفحه الرئيسيه</a></dt>
-            <dt><a href="./attendance.html">الغياب</a></dt>
-            <dt><a href="#">عن المدرسه</a></dt>
-            <dt><a href="#">الجدول</a></dt>
-            </dl>
+            <list>
+            <ul><a href="./">الصفحه الرئيسيه</a></ul>
+            <ul><a href="./attendance.html">الغياب</a></ul>
+            <ul><a href="#">عن المدرسه</a></ul>
+            <ul><a href="#">الجدول</a></ul>
+            </list>
         </nav>
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
