--- a/attendance.html
+++ b/attendance.html
@@ -17,12 +17,12 @@
 
     <body>    
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-            <dl>
-            <dt><a href="./">الصفحه الرئيسيه</a></dt>
-            <dt><a href="./attendance.html">الغياب</a></dt>
-            <dt><a href="#">عن المدرسه</a></dt>
-            <dt><a href="#">الجدول</a></dt>
-            </dl>
+            <list>
+            <li><a href="./">الصفحه الرئيسيه</a></li>
+            <li><a href="./attendance.html">الغياب</a></li>
+            <li><a href="#">عن المدرسه</a></li>
+            <li><a href="#">الجدول</a></li>
+            </list>
          
 </nav>
      
