--- a/attendance.html
+++ b/attendance.html
@@ -17,12 +17,14 @@
 
     <body>    
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-            <list>
-            <li><a href="./">الصفحه الرئيسيه</a></li>
-            <li><a href="./attendance.html">الغياب</a></li>
-            <li><a href="#">عن المدرسه</a></li>
-            <li><a href="#">الجدول</a></li>
-            </list>
+  <div class="container-fluid">
+   <ul class="navbar-nav>
+            <li class="nav-item"><a class="nav-link" href="./">الصفحه الرئيسيه</a></li>
+            <li class="nav-item"><a class="nav-link" href="./attendance.html">الغياب</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">عن المدرسه</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">الجدول</a></li>
+              </ul>
+            </div>
          
 </nav>
      
