--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     </head>
 
     <body>    
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-
-            <list>
-            <ul><a href="./">الصفحه الرئيسيه</a></ul>
-            <ul><a href="./attendance.html">الغياب</a></ul>
-            <ul><a href="#">عن المدرسه</a></ul>
-            <ul><a href="#">الجدول</a></ul>
-            </list>
-        </nav>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <div class="container-fluid">
+   <ul class="navbar-nav>
+            <li class="nav-item"><a class="nav-link" href="./">الصفحه الرئيسيه</a></li>
+            <li class="nav-item"><a class="nav-link" href="./attendance.html">الغياب</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">عن المدرسه</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">الجدول</a></li>
+              </ul>
+            </div>
+         
+</nav>
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
