--- a/attendance.html
+++ b/attendance.html
@@ -16,8 +16,13 @@
     </head>
 
     <body>    
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-  <div class="container-fluid">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container-fluid">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+     <span class="navbar-toggler-icon"></span>
+    </button>
+ <div class="collapse navbar-collapse" id="collapsibleNavbar">
    <ul class="navbar-nav>
             <li class="nav-item"><a class="nav-link" href="./">الصفحه الرئيسيه</a></li>
             <li class="nav-item"><a class="nav-link" href="./attendance.html">الغياب</a></li>
@@ -25,7 +30,7 @@
             <li class="nav-item"><a class="nav-link" href="#">الجدول</a></li>
               </ul>
             </div>
-         
+         </div>
 </nav>
      
 
