--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
 
     <body>    
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <nav class="navbar  bg-dark navbar-dark fixed-top">
         <div class="container-fluid">
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
