--- a/attendance.html
+++ b/attendance.html
@@ -23,11 +23,11 @@
      <span class="navbar-toggler-icon"></span>
     </button>
  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-   <ul class="navbar-nav>
-            <li class="nav-item"><a class="nav-link" href="./">الصفحه الرئيسيه</a></li>
-            <li class="nav-item"><a class="nav-link" href="./attendance.html">الغياب</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">عن المدرسه</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">الجدول</a></li>
+   <ul class="navbar-nav">
+            <dt class="nav-item"><a class="nav-link" href="./">الصفحه الرئيسيه</a></dt>
+            <dt class="nav-item"><a class="nav-link" href="./attendance.html">الغياب</a></dt>
+            <dt class="nav-item"><a class="nav-link" href="#">عن المدرسه</a></dt>
+            <dt class="nav-item"><a class="nav-link" href="#">الجدول</a></dt>
               </ul>
             </div>
          </div>
