--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <ul class="navbar-nav">
             <dt class="nav-item"><a class="nav-link" href="./">الصفحه الرئيسيه</a></dt>
             <dt class="nav-item"><a class="nav-link" href="./attendance.html">الغياب</a></dt>
-            <dt class="nav-item"><a class="nav-link" href="#">عن المدرسه</a></dt>
+            <dt class="nav-item"><a class="nav-link" href="./about.html">عن المدرسه</a></dt>
             <dt class="nav-item"><a class="nav-link" href="#">الجدول</a></dt>
               </ul>
             </div>
