--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
        
   <nav class="navbar  bg-dark navbar-dark fixed-top">
         <div class="container-fluid">
+    <a class="navbar-brand" href="./">
+      <img src="img/icon-192x192.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
+    </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
      <span class="navbar-toggler-icon"></span>
