--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
          </div>
 </nav>
         <body> 
+             <div class="container mt-7">
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
@@ -64,6 +65,7 @@
     <span class="carousel-control-next-icon"></span>
   </button>
 </div>
+            </div>
     </body>
     <footer>
         </footer>
