--- a/about.html
+++ b/about.html
@@ -35,7 +35,9 @@
          </div>
 </nav>
    <body>
+     <div class="container mt-7">
       <h2>عن الصحابي عروه بن الزبير</h2>
+      </div>
     </body>
     <footer>
         </footer>
