--- a/attendance.html
+++ b/attendance.html
@@ -16,7 +16,7 @@
     </head>
 
 
-  <nav class="navbar  bg-dark navbar-dark fixed-top">
+  <nav class="navbar  bg-dark navbar-dark ">
         <div class="container-fluid">
     <a class="navbar-brand" href="./">
       <img src="img/icon-192x192.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
