--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          </div>
 </nav>
         <body> 
-             <div class="container mt-7">
+             <div class="container mt-7 p-7">
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
