--- a/attendance.html
+++ b/attendance.html
@@ -70,13 +70,13 @@ document.write(date);
     </thead>
     <tbody>
       <tr>
-         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="seventhperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="sixthperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="fithperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="fourthperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="thirdperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="secondperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="firstperiod"></div></td>
         <td></td>
         <td></td>
         <td></td>
