--- a/attendance.html
+++ b/attendance.html
@@ -39,14 +39,24 @@
          <body>    
 
         <div class="container mt-7 p-7">
-               <div class="dropdown">
-      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> الصف</button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" >العاشر</a></li>
-    <li><a class="dropdown-item" >حادي عشر</a></li>
-    <li><a class="dropdown-item" >الثاني عشر</a></li>
-  </ul>
-</div>
+         
+        <div class="btn-group">
+  <button type="button" class="btn btn-primary">١٠-١</button>
+  <button type="button" class="btn btn-primary">١٠-٢</button>
+  <button type="button" class="btn btn-primary">١٠-٣</button>
+  <button type="button" class="btn btn-primary">١٠-٤</button>
+  <button type="button" class="btn btn-primary">١٠-٥</button>
+  <button type="button" class="btn btn-primary">١٠-٦</button>
+  <button type="button" class="btn btn-primary">١٠-٧</button>
+  <button type="button" class="btn btn-primary">١٠-٨</button>
+  <button type="button" class="btn btn-primary">١٠-٩</button>
+  <button type="button" class="btn btn-primary">١٠-١٠</button>
+  <button type="button" class="btn btn-primary">١٠-١١</button>
+  <button type="button" class="btn btn-primary">١٠-١٢</button>
+</div> 
+         
+
+   
       <h1>الغياب</h1>
   <h2>
    <script>
