--- a/attendance.html
+++ b/attendance.html
@@ -56,18 +56,18 @@
 </div> 
          
         <div class="btn-group">
-  <button type="button" class="btn btn-primary">١١د١</button>
-  <button type="button" class="btn btn-primary">١١د٢</button>
-  <button type="button" class="btn btn-primary">١١د٣</button>
-  <button type="button" class="btn btn-primary">١١د٤</button>
-  <button type="button" class="btn btn-primary">١١د٥</button>
-  <button type="button" class="btn btn-primary">١١د٦</button>
-  <button type="button" class="btn btn-primary">١١ع١</button>
-  <button type="button" class="btn btn-primary">١١ع٢</button>
-  <button type="button" class="btn btn-primary">١١ع٣</button>
-  <button type="button" class="btn btn-primary">١١ع٤</button>
-  <button type="button" class="btn btn-primary">١١ع٥</button>
-  <button type="button" class="btn btn-primary">١١ع٦</button>
+  <button type="button" class="btn btn-warning">١١د١</button>
+  <button type="button" class="btn btn-warning">١١د٢</button>
+  <button type="button" class="btn btn-warning">١١د٣</button>
+  <button type="button" class="btn btn-warning">١١د٤</button>
+  <button type="button" class="btn btn-warning">١١د٥</button>
+  <button type="button" class="btn btn-warning">١١د٦</button>
+  <button type="button" class="btn btn-warning">١١ع١</button>
+  <button type="button" class="btn btn-warning">١١ع٢</button>
+  <button type="button" class="btn btn-warning">١١ع٣</button>
+  <button type="button" class="btn btn-warning">١١ع٤</button>
+  <button type="button" class="btn btn-warning">١١ع٥</button>
+  <button type="button" class="btn btn-warning">١١ع٦</button>
 </div> 
 
    
