--- a/attendance.html
+++ b/attendance.html
@@ -69,7 +69,23 @@
   <button type="button" class="btn btn-warning">١١ع٥</button>
   <button type="button" class="btn btn-warning">١١ع٦</button>
 </div> 
-
+        <div class="btn-group">
+  <button type="button" class="btn btn-danger">١٢د١</button>
+  <button type="button" class="btn btn-danger">١٢د٢</button>
+  <button type="button" class="btn btn-danger">١٢د٣</button>
+  <button type="button" class="btn btn-danger">١٢د٤</button>
+  <button type="button" class="btn btn-danger">١٢د٥</button>
+  <button type="button" class="btn btn-danger">١٢د٦</button>
+  <button type="button" class="btn btn-danger">١٢د٧</button>
+  <button type="button" class="btn btn-danger">١٢ع١</button>
+  <button type="button" class="btn btn-danger">١٢ع٢</button>
+  <button type="button" class="btn btn-danger">١٢ع٣</button>
+  <button type="button" class="btn btn-danger">١٢ع٤</button>
+  <button type="button" class="btn btn-danger">١٢ع٥</button>
+  <button type="button" class="btn btn-danger">١٢ع٦</button>
+  <button type="button" class="btn btn-danger">١٢ع٧</button>
+  <button type="button" class="btn btn-danger">١٢ع٨</button>
+</div> 
    
       <h1>الغياب</h1>
   <h2>
