--- a/attendance.html
+++ b/attendance.html
@@ -62,12 +62,13 @@
   <button type="button" class="btn btn-warning">١١د٤</button>
   <button type="button" class="btn btn-warning">١١د٥</button>
   <button type="button" class="btn btn-warning">١١د٦</button>
+  <button type="button" class="btn btn-warning">١١د٧</button>
+  <button type="button" class="btn btn-warning">١١د٨</button>
   <button type="button" class="btn btn-warning">١١ع١</button>
   <button type="button" class="btn btn-warning">١١ع٢</button>
   <button type="button" class="btn btn-warning">١١ع٣</button>
   <button type="button" class="btn btn-warning">١١ع٤</button>
-  <button type="button" class="btn btn-warning">١١ع٥</button>
-  <button type="button" class="btn btn-warning">١١ع٦</button>
+    
 </div> 
         <div class="btn-group">
   <button type="button" class="btn btn-danger">١٢د١</button>
