--- a/attendance.html
+++ b/attendance.html
@@ -57,7 +57,7 @@
 </div> 
          
         <div class="btn-group">
-  <button type="button" class="btn btn-warning">١١د١</button>
+  <button type="button" class="btn btn-warning" onclick="addData()">١١د١</button>
   <button type="button" class="btn btn-warning">١١د٢</button>
   <button type="button" class="btn btn-warning">١١د٣</button>
   <button type="button" class="btn btn-warning">١١د٤</button>
@@ -112,7 +112,25 @@ document.write(date);
         <th>الأسم</th>
       </tr>
     </thead>
-    <tbody>
+   
+    <tbody id="tablebody">
+     
+     <script>
+     function addData(){
+     document.getElementById("tablebody").SetInnerHtml("<tr>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="seventhperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="sixthperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="fithperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="fourthperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="thirdperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="secondperiod"></div></td>
+        <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="firstperiod"></div></td>
+        <td></td>
+        <td>١١د١</td>
+        <td>dummy</td>
+      </tr>")
+     }
+     </script>
       <tr>
         <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="seventhperiod"></div></td>
         <td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="sixthperiod"></div></td>
@@ -126,6 +144,7 @@ document.write(date);
         <td></td>
       </tr>
     </tbody>
+   
   </table>
 </div>
     </body>
