--- a/attendance.html
+++ b/attendance.html
@@ -57,7 +57,7 @@
 </div> 
          
         <div class="btn-group">
-  <button type="button" class="btn btn-warning" onclick="addData()">١١د١</button>
+  <button type="button" class="btn btn-warning" onClick="addData()">١١د١</button>
   <button type="button" class="btn btn-warning">١١د٢</button>
   <button type="button" class="btn btn-warning">١١د٣</button>
   <button type="button" class="btn btn-warning">١١د٤</button>
