--- a/attendance.html
+++ b/attendance.html
@@ -124,6 +124,7 @@ document.write(date);
         <td></td>
       </tr>
     </tbody>
+   </table>
    </div>
           <div id="C10-2" class="tablecontent">
   <table class="table table-dark table-striped">
@@ -158,6 +159,7 @@ document.write(date);
         <td></td>
       </tr>
     </tbody>
+   </table>
    </div>
     </body>
     <footer>
