--- a/attendance.html
+++ b/attendance.html
@@ -41,6 +41,8 @@
         <div class="container mt-7 p-7">
          
         <div class="btn-group">
+         <div class="btn-group-vertical">
+
   <button type="button" class="btn btn-primary"onclick="opentable('C10-1')">١٠-١</button>
   <button type="button" class="btn btn-primary"onclick="opentable('C10-2')">١٠-٢</button>
   <button type="button" class="btn btn-primary">١٠-٣</button>
@@ -54,6 +56,8 @@
   <button type="button" class="btn btn-primary">١٠-١١</button>
   <button type="button" class="btn btn-primary">١٠-١٢</button>
   <button type="button" class="btn btn-primary">١٠-١٣</button>
+          </div>
+         <div class="btn-group-vertical">
   <button type="button" class="btn btn-warning">١١د١</button>
   <button type="button" class="btn btn-warning">١١د٢</button>
   <button type="button" class="btn btn-warning">١١د٣</button>
@@ -66,6 +70,8 @@
   <button type="button" class="btn btn-warning">١١ع٢</button>
   <button type="button" class="btn btn-warning">١١ع٣</button>
   <button type="button" class="btn btn-warning">١١ع٤</button>
+          </div>
+         <div class="btn-group-vertical">
   <button type="button" class="btn btn-danger">١٢د١</button>
   <button type="button" class="btn btn-danger">١٢د٢</button>
   <button type="button" class="btn btn-danger">١٢د٣</button>
@@ -81,7 +87,8 @@
   <button type="button" class="btn btn-danger">١٢ع٦</button>
   <button type="button" class="btn btn-danger">١٢ع٧</button>
   <button type="button" class="btn btn-danger">١٢ع٨</button>
-</div> 
+</div>
+         </div> 
    
       <h1>الغياب</h1>
   <h2>
