--- a/attendance.html
+++ b/attendance.html
@@ -41,7 +41,7 @@
         <div class="container mt-7 p-7">
          
         <div class="btn-group">
-         <div class="btn-group-vertical">
+         <div class="btn-group">
 
   <button type="button" class="btn btn-primary"onclick="opentable('C10-1')">١٠-١</button>
   <button type="button" class="btn btn-primary"onclick="opentable('C10-2')">١٠-٢</button>
@@ -57,7 +57,7 @@
   <button type="button" class="btn btn-primary">١٠-١٢</button>
   <button type="button" class="btn btn-primary">١٠-١٣</button>
           </div>
-         <div class="btn-group-vertical">
+         <div class="btn-group">
   <button type="button" class="btn btn-warning">١١د١</button>
   <button type="button" class="btn btn-warning">١١د٢</button>
   <button type="button" class="btn btn-warning">١١د٣</button>
@@ -71,7 +71,7 @@
   <button type="button" class="btn btn-warning">١١ع٣</button>
   <button type="button" class="btn btn-warning">١١ع٤</button>
           </div>
-         <div class="btn-group-vertical">
+         <div class="btn-group">
   <button type="button" class="btn btn-danger">١٢د١</button>
   <button type="button" class="btn btn-danger">١٢د٢</button>
   <button type="button" class="btn btn-danger">١٢د٣</button>
