--- a/attendance.html
+++ b/attendance.html
@@ -40,7 +40,7 @@
 
         <div class="container mt-7 p-7">
          
-        <div class="btn-group">
+        <div class="btn-group-vertical">
          <div class="btn-group">
 
   <button type="button" class="btn btn-primary"onclick="opentable('C10-1')">١٠-١</button>
