--- a/attendance.html
+++ b/attendance.html
@@ -163,6 +163,7 @@ document.write(date);
       </tr>
     </tbody>
    </table>
+           </div>
            <div id="C10-3" class="tablecontent">
   <table class="table table-dark table-striped">
     <thead>
