--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
         <title>ثانويه عروه بن الزبير بنين </title>
         <script src="index.js"></script>
         <!-- Latest compiled and minified CSS -->
+               <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Latest compiled JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
