--- a/attendance.html
+++ b/attendance.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="apple-touch-icon" href="img/icon-192x192.png">
         <link rel="manifest"href="manifest.json">
+         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>ثانويه عروه بن الزبير بنين </title>
         <script src="index.js"></script>
         <!-- Latest compiled and minified CSS -->
